# Platform_ROS2_ws

./: .gitignore  README.md  ROS Tip
bin_packages/: add_path.py
bin_packages/Mbed Programs/Zeus1_JINGAHK_v3/: QEI.h  main.cpp
bin_packages/Mbed Programs/Zeus1_JINGAHK_v3/SerialStream/.hg/: dirstate  hgrc
bin_packages/Mbed Programs/Zeus1_JINGAHK_v4_real_platform/: QEI.cpp  main.cpp  mbed_app.json
bin_packages/Mbed Programs/Zeus1_JINGAHK_v4_real_platform/include/: RobotControl.hpp
bin_packages/Open3D/: CMakeLists.txt
bin_packages/coverage_planner/: CMakeLists.txt  package.xml
bin_packages/detect_button_pixel_coordinate/: CMakeLists.txt
bin_packages/detect_button_pixel_coordinate/detect_button/yolov5/: detect_yolo.py
bin_packages/detect_button_pixel_coordinate/launch/: detect_yolo.launch.py
bin_packages/detect_button_pixel_coordinate/msg/: DetectionResults.msg
bin_packages/detect_button_pixel_coordinate/srv/: ButtonRequest.srv
bin_packages/detection_3d/: CMakeLists.txt
bin_packages/detection_3d/detection_3d/: detect_votenet.py
bin_packages/detection_3d/detection_3d/demo_files/scannet_results/: 000000_aggregated_vote_pc.ply  000000_pred_confident_bbox.ply  000000_pred_confident_nms_bbox.ply  000000_pred_nms_bbox.ply  000000_proposal_pc.ply  000000_vgen_pc.ply
bin_packages/detection_3d/detection_3d/demo_files/sunrgbd_results/: 000000_aggregated_vote_pc.ply  000000_confident_proposal_pc.ply  000000_pc.ply  000000_pred_bbox.ply  000000_vgen_pc.ply
bin_packages/detection_3d/detection_3d/pointnet2/: pointnet2 changes.txt
bin_packages/platform_gui/src/: image_converter.hpp  main.cpp  platform_gui.h  platform_gui.ui  platform_node.cpp
bin_packages/platform_gui_short/: package.xml
bin_packages/platform_gui_short/qt_build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  platform_gui.cbp
bin_packages/platform_gui_short/qt_build/ament_cmake_core/: package.cmake  platform_guiConfig.cmake
bin_packages/platform_gui_short/qt_build/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
bin_packages/platform_gui_short/qt_build/ament_cmake_package_templates/: templates.cmake
bin_packages/platform_gui_short/qt_build/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
bin_packages/platform_gui_short/qt_build/platform_gui_autogen/: moc_predefs.h  mocs_compilation.cpp
bin_packages/platform_gui_short/src/: clickablelabel.hpp  platform_node.cpp  platform_node.hpp  untitled.pro  widget.cpp  widget.h  widget.ui  zeus_resource.qrc
bin_packages/robot_arm_server_legacy/: package.xml
bin_packages/robot_arm_server_legacy/src/: robot_arm_srv.cpp
bin_packages/robot_arm_server_pixel_coordinate/: CMakeLists.txt
bin_packages/robot_arm_server_pixel_coordinate/src/: robot_arm_srv.cpp
bin_packages/tcp_mbed/: package.xml  setup.cfg  setup.py
bin_packages/tcp_mbed/launch/: bt_localization.launch.py
bin_packages/tcp_mbed/tcp_mbed/: platfor_control.py  tcp_listener.py  tools.py
bin_packages/vision_cph/detection_2d/: package.xml
bin_packages/vision_cph/detection_2d/launch/: detect_yolo.launch.py
bin_packages/vision_cph/pcd_manager/config/: high_density.json
bin_packages/vision_cph/pcd_manager/msg/: SerializedArray.msg
bin_packages/vision_cph/pcd_manager/pcd_manager/: imgui.ini  pcd_publisher.py
bin_packages/vision_o3d/detection_2d/: CMakeLists.txt
bin_packages/vision_o3d/detection_2d/launch/: detect_yolo.launch.py
bin_packages/vision_o3d/pcd_manager/msg/: RGBDImage.msg
bin_packages/vision_o3d/pcd_manager/pcd_manager/: pcd_publisher.py
workspaces/: README.txt
workspaces/self_drive_ws/src/: .rosinstall
workspaces/self_drive_ws/src/platform_control/: CMakeLists.txt
workspaces/self_drive_ws/src/platform_control/map/: map.pgm  (+4 more)
workspaces/self_drive_ws/src/platform_gui/: CMakeLists.txt  package.xml
workspaces/self_drive_ws/src/platform_gui/src/: clickablelabel.h  main.cpp  platform_node.cpp  platform_node.hpp  widget.cpp  widget.h  widget.ui
workspaces/self_drive_ws/src/platform_nav2/: CMakeLists.txt
workspaces/self_drive_ws/src/robot_arm/cleaner_arm_control/: CMakeLists.txt  package.xml
workspaces/self_drive_ws/src/robot_arm/cleaner_arm_control/src/: clear_multi_turn.cpp
workspaces/test/: tf_listener.py
workspaces_foxy/: README.txt
workspaces_foxy/self_drive_ws/src/platform_control/: CMakeLists.txt  package.xml
workspaces_foxy/self_drive_ws/src/platform_gui/: CMakeLists.txt  package.xml
workspaces_foxy/self_drive_ws/src/platform_nav2/: CMakeLists.txt  package.xml
(+460 files in other folders)
